Fixed heart icon and layout on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ header p {
     color: #fff;
     text-decoration: none;
     font-size: 18px;
+    margin-left: 15px;
 }
 
 button {
@@ -142,7 +143,7 @@ footer p {
     font-size: 14px;
 }
 
-footer i.icon-heart {
+footer ion-icon.icon-heart {
     color: red;
     margin-left: 2px;
     margin-right: 2px;
